Try again to fix button format on iPhone

--- a/css/index.css
+++ b/css/index.css
@@ -35,6 +35,10 @@
     text-align: center;
     -webkit-appearance: none;
   }
+
+  #buttonCenter{
+    text-align: center;
+  }
   
   input[type=submit]:hover {
     background-color: rgb(175, 241, 131);
